kubernetes/2-PeerPrep-User-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - image: asdfghjklxd/peerprep-user-service:IMAGE_TAG
        imagePullPolicy: Always
        name: user-service
        ports:
        - containerPort: 8001
        resources:
