kubernetes/3-PeerPrep-Compute-Infrastructure.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: peerprep
  name: peerprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peerprep
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: peerprep
    spec:
      containers:
      - image: asdfghjklxd/peerprep-user-service:IMAGE_TAG
        imagePullPolicy: Always
        name: user-service
        ports:
        - containerPort: 8001
        resources:
      - image: asdfghjklxd/peerprep-question-service:IMAGE_TAG
        imagePullPolicy: Always
        name: question-service
        ports:
        - containerPort: 8003
        resources:
      - image: asdfghjklxd/peerprep-matching-service:IMAGE_TAG
        imagePullPolicy: Always
        name: matching-service
        ports:
        - containerPort: 8002
        resources:
      - image: asdfghjklxd/peerprep-collaboration-service:IMAGE_TAG
        imagePullPolicy: Always
        name: collaboration-service
        ports:
          - containerPort: 8004
        resources:
