kubernetes/4-PeerPrep-Matching-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matching-service
  name: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
      - image: asdfghjklxd/peerprep-matching-service:IMAGE_TAG
        imagePullPolicy: Always
        name: matching-service
        ports:
        - containerPort: 8002
        resources:
