kubernetes/4-PeerPrep-Matching-Service-Service.yml
kind: Service
apiVersion: v1
metadata:
  name: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - name: matching-service
      protocol: TCP
      port: 8002
      targetPort: 8002
