kubernetes/5-PeerPrep-Collaboration-Service-Service.yml
kind: Service
apiVersion: v1
metadata:
  name: collaboration-service
spec:
  selector:
    app: collaboration-service
  ports:
    - name: collaboration-service
      protocol: TCP
      port: 8004
      targetPort: 8004
