kubernetes/6-PeerPrep-Communication-Service-Service.yml
kind: Service
apiVersion: v1
metadata:
  name: communication-service
spec:
  selector:
    app: communication-service
  ports:
    - name: communication-service
      protocol: TCP
      port: 8005
      targetPort: 8005
