kubernetes/6-PeerPrep-Communication-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: communication-service
  name: communication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communication-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: communication-service
    spec:
      containers:
      - image: asdfghjklxd/peerprep-communication-service:IMAGE_TAG
        imagePullPolicy: Always
        name: communication-service
        ports:
          - containerPort: 8004
        resources:
          limits:
            cpu: 400m
---

kind: Service
apiVersion: v1
metadata:
  name: communication-service
spec:
  selector:
    app: communication-service
  ports:
    - name: communication-service
      protocol: TCP
      port: 8005
      targetPort: 8005
